<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="35dp"/>

    <EditText
        android:id="@+id/ed_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_sign_up"
        android:background="@drawable/round_border"
        android:hint="@string/name"
        android:elevation="10dp"
        android:padding="8dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="27dp"
        android:textSize="13sp"
        android:drawableStart="@mipmap/baseline_account_circle_black_18dp"
        android:drawablePadding="5dp"/>

    <EditText
        android:id="@+id/ed_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_name"
        android:background="@drawable/round_border"
        android:hint="@string/e_mail"
        android:elevation="10dp"
        android:padding="8dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="27dp"
        android:textSize="13sp"
        android:drawableStart="@mipmap/baseline_drafts_black_18dp"
        android:drawablePadding="5dp" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_email"
        android:background="@drawable/round_border"
        android:hint="@string/password"
        android:elevation="10dp"
        android:padding="8dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:textSize="13sp"
        android:drawableStart="@mipmap/baseline_lock_black_18dp"
        android:drawablePadding="5dp"/>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_password"
        android:text="@string/checkbox_text"
        android:textSize="11sp"
        android:textColor="#707070"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"/>


    <Button
        android:id="@+id/btn_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox"
        android:background="@drawable/round_border"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/create_account"
        android:elevation="10dp" />

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_text"
        android:layout_below="@+id/btn_sign"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>